<resources>
    <string name="app_name">TimeTable_Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">更新</string>
    <string name="back">戻る</string>
    <string name="history_select">履歴選択</string>
    <string name="new_input">新規入力</string>
    <string name="color_select">色選択</string>
    <string name="timetable_app">時間割管理アプリ</string>
    <string name="data_add_value">データ作成</string>
    <string name="attendance_add_value">出席入力</string>
    <string name="attendance_output_value">出席確認</string>
    <string name="backup_value">バックアップ</string>
    <string name="restore_value">リストア</string>
    <string name="text_setting_value">セッティング</string>
    <string name="text_data_make">データを作成する</string>
    <string name="text_sat_enable_switch">土曜日を有効にする</string>
    <string name="text_one_daye_timed">一日の時間数</string>
    <string name="text_make_group">グループを作る</string>
    <string name="text_student_make">学生を作る</string>
    <string name="text_timetable_make">時間割を作る</string>
    <string name="text_base_setting">基本設定</string>
    <string name="text_main_title">出席管理アプリ</string>
    <string name="subject_name">科目名</string>
    <string name="subject_mentor">科目担当者</string>
    <string name="group_select">グループ選択</string>
    <string name="student_select">学生選択</string>
    <string name="time_select">時間を選択する</string>
    <string name="group_edit">グループの編集</string>
    <string name="group_name">グループ名</string>
    <string name="timed">時間</string>
    <string name="subject">科目</string>
    <string name="mentor">担当</string>
    <string name="timetable_check">時間割確認</string>
    <string name="time_table_color_edit">科目の履歴修正</string>
</resources>