<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="tokyo.mstp015v.timetable_pro.MainFragment"
        android:label="@string/timetable_app"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_to_settingFragment"
            app:destination="@id/settingFragment" />
        <action
            android:id="@+id/action_to_enterAttendanceForGroupFragment"
            app:destination="@id/enterTimeTableForGroupFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="tokyo.mstp015v.timetable_pro.SettingFragment"
        android:label="@string/text_setting_value"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_to_makeGroupFragment"
            app:destination="@id/makeGroupFragment" />
        <action
            android:id="@+id/action_to_makeTimeTableForGroupFragment"
            app:destination="@id/makeTimeTableForGroupFragment" />
        <action
            android:id="@+id/action_editTimeTableColorFragment2"
            app:destination="@id/editTimeTableColorFragment" />
    </fragment>
    <fragment
        android:id="@+id/makeGroupFragment"
        android:name="tokyo.mstp015v.timetable_pro.MakeGroupFragment"
        android:label="@string/group_edit"
        tools:layout="@layout/fragment_make_group"/>
    <fragment
        android:id="@+id/makeTimeTableForGroupFragment"
        android:name="tokyo.mstp015v.timetable_pro.MakeTimeTableForGroupFragment"
        android:label="@string/group_select"
        tools:layout="@layout/fragment_make_time_table_for_group">
        <action
            android:id="@+id/action_to_makeTimeTableFragment"
            app:destination="@id/makeTimeTableFragment" />
    </fragment>
    <fragment
        android:id="@+id/makeTimeTableFragment"
        android:name="tokyo.mstp015v.timetable_pro.MakeTimeTableFragment"
        android:label="@string/text_timetable_make"
        tools:layout="@layout/fragment_make_time_table">
        <argument
            android:name="g_name"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/enterTimeTableForGroupFragment"
        android:name="tokyo.mstp015v.timetable_pro.EnterTimeTableForGroupFragment"
        android:label="@string/group_select"
        tools:layout="@layout/fragment_enter_time_table_for_group">
        <action
            android:id="@+id/action_to_enterTimeTableFragment"
            app:destination="@id/enterTimeTableFragment" />
    </fragment>
    <fragment
        android:id="@+id/enterTimeTableFragment"
        android:name="tokyo.mstp015v.timetable_pro.EnterTimeTableFragment"
        android:label="@string/time_select"
        tools:layout="@layout/fragment_enter_time_table">
        <argument
            android:name="g_name"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/editTimeTableColorFragment"
        android:name="tokyo.mstp015v.timetable_pro.EditTimeTableColorFragment"
        android:label="fragment_edit_time_table_color"
        tools:layout="@layout/fragment_edit_time_table_color" />
</navigation>